# brain

./: .bazelrc  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
auth/: main.go
base/go/errs/: BUILD.bazel  errlist.go  errlist_test.go  errs_test.go
base/go/key/: BUILD.bazel  key.go  string.go
base/go/log/: BUILD.bazel  log.go  log_test.go
bazel/appengine/: defs.bzl
bazel/appengine/deploy/: BUILD.bazel
bazel/appengine/test/: BUILD.bazel
ci/: howto
ci/metadata/proto/: metadata.proto
cli/: BUILD.bazel  cli  main.go
cli/commands/: BUILD.bazel  root.go
cli/config/: BUILD.bazel  config.go  config_test.go
cloud/firestore/: BUILD.bazel  firestore.go
cloud/pubsub/: BUILD.bazel  main.go
cloud/repos/: BUILD.bazel  main.go
cloud/storage/: BUILD.bazel  writer.go
dag/: BUILD.bazel  dag.go  dag_test.go
deploy/: load-balancer-example.yaml
deploy/calico/: calico.yaml
deploy/csi/: local-path-storage.yaml  pvc.yaml  pvc_simple.yaml
deploy/dashboard/: howto
deploy/etcd/: etcd  etcdclient.yaml
deploy/jenkins/: jenkins_ingress.yaml
deploy/kubemq/: kubemq.yaml
deploy/kubevirt/: cdi-operator.yaml  cloud-init.default  hostdisk.yaml  howto  image_fedora  image_ubuntu  kubevirt-operator.yaml  pv.yaml  ubuntu-1.yaml  vm1.yaml  vm2.yaml  vm3.yaml
deploy/metallb/: config.yaml
deploy/prometheus/: prometheus.yaml
deploy/samba/: Dockerfile  launch.sh  samba.sh
deploy/spot/: install
deploy/spot-cluster/: delete  howto  init  kube.config
deploy/spot/bazel/: howto
deploy/vault/: config.json
howto/: bazel
interview/and_sum/: BUILD.bazel  input01.txt  main.go
interview/arr1/: BUILD.bazel  arr1.go
interview/balanced_array/: BUILD.bazel  main.go
interview/book/: BUILD.bazel  book.go
interview/connected_cells/: input02.txt  input04.txt  main.go
interview/cookies/: BUILD.bazel  main.go
interview/countsort/: BUILD.bazel  main.go
interview/graph/bfs/: BUILD.bazel  input05.txt  main.go
interview/graph/cities/: BUILD.bazel  main.go
interview/graph/connected_cells/: BUILD.bazel  main.go
interview/graph/dijkstra/: BUILD.bazel  main.go
interview/graph/even_tree/: BUILD.bazel  main.go
interview/graph/kruskal/: BUILD.bazel  main.go
interview/graph/prim/: BUILD.bazel  main.go
interview/heap/pairing/: BUILD.bazel  heap.go  heap_test.go
interview/heap/qheap/: BUILD.bazel  main.go
interview/insertion/: BUILD.bazel  main.go
interview/largest-rectangle/: BUILD.bazel  input01.txt  main.go
interview/linked-lists/merge/: main.cc
interview/linked_list_set/: BUILD.bazel  main.go
interview/median/: BUILD.bazel  main.go
interview/qheap/: main.go
interview/selection/: BUILD.bazel  main.go
interview/two-stacks/: BUILD.bazel  main.go
interview/waiter/: BUILD.bazel  input09.txt  main.go  output09.txt
interview/xor/: BUILD.bazel  input11.txt  main.go
interview/xor_sequence/: BUILD.bazel  main.go
k8s/kubemq/example/pub_sub/client/: BUILD.bazel  main.go
k8s/kubemq/example/pub_sub/sender/: BUILD.bazel  main.go
k8s/kubemq/example/store/client/: BUILD.bazel  main.go
k8s/kubemq/example/store/sender/: BUILD.bazel
kubemq/example/pub_sub/client/: BUILD.bazel
kubemq/example/pub_sub/sender/: BUILD.bazel
kubemq/example/store/client/: BUILD.bazel
kubemq/example/store/sender/: BUILD.bazel  main.go
loader/: BUILD.bazel  app.yaml  loader.go
loader/app/: BUILD.bazel  go.mod  go.sum  loader.go
loader/bullet/: BUILD.bazel  bullet.go
loader/caliber/: BUILD.bazel  caliber.go
loader/cases/: BUILD.bazel  case.go
loader/cloud/: BUILD.bazel  auth.go  cloud.go
loader/commands/: BUILD.bazel  root.go
loader/commands/bullet/: BUILD.bazel  bullet.go
loader/commands/caliber/: BUILD.bazel  caliber.go
loader/commands/cases/: BUILD.bazel  case.go
loader/commands/load/: BUILD.bazel  load.go
loader/commands/manufacturer/: BUILD.bazel  manufacturer.go
loader/commands/powder/: BUILD.bazel  powder.go
loader/commands/primer/: BUILD.bazel  primer.go
loader/load/: BUILD.bazel  load.go
loader/loader/: BUILD.bazel  main.go
loader/manufacturer/: BUILD.bazel  manufacturer.go
loader/powder/: BUILD.bazel  powder.go
loader/primer/: BUILD.bazel  primer.go
loader/user/: BUILD.bazel  user.go
loader/users/: BUILD.bazel  users.go
storage/: BUILD.bazel  writer.go
test/: BUILD.bazel  operator.bzl  push.bzl
testrunner/component/: BUILD.bazel  component.go
testrunner/result/: BUILD.bazel  result.go
testrunner/sut/: BUILD.bazel  sut.go
windows/display/: BUILD.bazel  display.go
windows/display/resolv/: BUILD.bazel  lexer.go  parser.go  resolv_test.go
windows/input/: main.go
