load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["example.go"],
    importpath = "hines-alloc/brain/test",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(":operator.bzl", "atom_helm_operator")

atom_helm_operator(
  name = "build_test_op",
  version = "test_op/v1",
  chart = ":chart",
  kind = "TestOp",
)

filegroup(
  name = "chart",
  srcs = glob(["chart/**"]),
  tags = ["helm-charts"],
)