load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "source.cloud.google.com/hines-alloc/brain/cli/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_viper//:go_default_library"],
)
