load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "hfam/brain/cli/config",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_spf13_viper//:go_default_library"
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_h_fam_errdiff//:go_default_library"],
)
