load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/h-fam/brain/cloud/pubsub",
    visibility = ["//visibility:private"],
    deps = [
        "//base/go/log:go_default_library",
        "@com_google_cloud_go//pubsub:go_default_library",
    ],
)

go_binary(
    name = "pubsub",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
