load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "hfam/brain/cloud/repos",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_api//sourcerepo/v1:go_default_library"],
)

go_binary(
    name = "repos",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
