load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "hines-alloc/brain/interview/balanced_array",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "balanced_array",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
