load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["book.go"],
    importpath = "hfam/brain/interview/book",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "book",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
