load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/h-fam/brain/interview/cookies",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cookies",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
