load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "hfam/brain/interview/median",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "median",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
