load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["loader.go"],
    importpath = "github.com/h-fam/brain/loader/app",
    visibility = ["//visibility:private"],
    deps = [
        "//loader/users:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
    ],
)

go_binary(
    name = "app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["loader_test.go"],
    embed = [":go_default_library"],
)
