load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["caliber.go"],
    importpath = "source.cloud.google.com/hines-alloc/brain/loader/caliber",
    visibility = ["//visibility:public"],
    deps = ["//vendor/cloud.google.com/go/datastore:go_default_library"],
)
