load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["case.go"],
    importpath = "hines-alloc/brain/loader/cases",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/caliber:go_default_library",
        "//loader/manufacturer:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
    ],
)
