load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "cloud.go",
    ],
    importpath = "source.cloud.google.com/hines-alloc/brain/loader/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/cloud.google.com/go/datastore:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)
