load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "cloud.go",
    ],
    importpath = "github.com/h-fam/brain/loader/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_google_cloud_go_datastore//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)
