load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "hfam/brain/loader/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/commands/bullet:go_default_library",
        "//loader/commands/caliber:go_default_library",
        "//loader/commands/cases:go_default_library",
        "//loader/commands/manufacturer:go_default_library",
        "//loader/commands/powder:go_default_library",
        "//loader/commands/primer:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
