load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["load.go"],
    importpath = "github.com/h-fam/brain/loader/load",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/bullet:go_default_library",
        "//loader/cases:go_default_library",
        "//loader/powder:go_default_library",
        "//loader/primer:go_default_library",
        "@com_google_cloud_go_datastore//:go_default_library",
    ],
)
