load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["powder.go"],
    importpath = "source.cloud.google.com/hines-alloc/brain/loader/powder",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/manufacturer:go_default_library",
        "//vendor/cloud.google.com/go/datastore:go_default_library",
    ],
)
