load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["powder.go"],
    importpath = "github.com/h-fam/brain/loader/powder",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/manufacturer:go_default_library",
        "@com_google_cloud_go_datastore//:go_default_library",
    ],
)
