load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["primer.go"],
    importpath = "hfam/brain/loader/primer",
    visibility = ["//visibility:public"],
    deps = [
        "//loader/manufacturer:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
    ],
)
