load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "display",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

go_library(
    name = "go_default_library",
    srcs = ["display.go"],
    importpath = "github.com/h-fam/brain/windows/display",
    visibility = ["//visibility:private"],
    deps = [
        "//base/go/log:go_default_library",
        "//windows/display/resolv:go_default_library",
    ],
)
