load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errs",
    srcs = [
        "errlist.go",
        "errmap.go",
    ],
    importpath = "hfam/brain/base/go/errs",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errlist_test",
    srcs = ["errlist_test.go"],
    visibility = ["//visibility:public"],
    deps = [
        ":errs",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "errlist.go",
        "errmap.go",
    ],
    importpath = "github.com/h-fam/brain/base/go/errs",
    visibility = ["//visibility:public"],
)
