load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errs",
    srcs = [
        "errlist.go",
        "errmap.go",
    ],
    importpath = "github.com/h-fam/brain/base/go/errs",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errs_test",
    srcs = ["errs_test.go"],
    visibility = ["//visibility:public"],
    deps = [
        ":errs",
    ],
)
