load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "key",
    srcs = ["key.go"],
    importpath = "hfam/brain/base/go/key",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["key.go"],
    importpath = "github.com/h-fam/brain/base/go/key",
    visibility = ["//visibility:public"],
)
